css/stylesheet.css
/* VARIABLE */
:root {
  --nav-height: 60px;
  --theme-font: 'Roboto Condensed',
    sans-serif;
  --theme-color-primary: rgb(17 20 62);
  --theme-color-secondary: rgb(45, 49, 250);
  --theme-color-tertiary: rgb(93, 139, 244);
  --theme-color-quaternary: rgb(223, 246, 255);
  --theme-color-quinary: rgb(227 227 227);
}

/* === GLOBAL STYLE START === */
html {
  scroll-behavior: smooth;
}

html {
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

body {
  margin: 0;
  font-family: var(--theme-font);
}

ol {
  margin: 0;
  padding: 0;
}

ol li {
  list-style: none;
}

a {
  text-decoration: none;
}

.navigation-container,
.section-container {
  max-width: 1920px;
  margin-left: auto;
  margin-right: auto;
  padding: 0 20px;
}

.section-container {
  padding-top: var(--nav-height);
  height: 100vh;
}

/* === GLOBAL STYLE END === */

/* === ANIMATION STYLE START === */

/* The typing effect */
@keyframes typing {
  from {
    width: 0
  }

  to {
    width: 100%
  }
}

/* The typewriter cursor effect */
@keyframes blink-caret {

  from,
  to {
    border-color: transparent
  }

  50% {
    border-color: white;
  }
}

.fade-out-right {
  transform: translate(160px, 0);
  opacity: 0 !important;
}

/* === ANIMATION STYLE END === */

/* === ALL ANIMATION CONTENT START === */
#hero section.right-hero h1,
#hero section.right-hero p,
#hero section.right-hero .action-button,
#form_contact .content-contact .contact-info,
#form_contact .content-contact .contact-form {
  opacity: 1;
  transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
}


/* === ALL ANIMATION CONTENT END === */


/*
  === HEADER / TOP NAV START ===
  fixed size: 60px
  because this element is fixed 
  make sure all element (.section-container) have equal margin top with this element
*/
header {
  height: calc(var(--nav-height) - 1px);
  position: fixed;
  top: 0;
  width: 100%;
  color: var(--theme-color-primary);
  border-bottom: 1px dashed var(--theme-color-primary);
  z-index: 100;
}

.navigation-container {
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: rgb(227 227 227 / 50%);
}

.navigation-container .left-navigation {
  display: flex;
  align-items: center;
}

.navigation-container .left-navigation .title {
  font-weight: bold;
  padding-left: 10px;
}

.navigation-container .left-navigation .title h1,
.navigation-container .left-navigation .title h2 {
  margin: 0;
}

.navigation-container .left-navigation h1 {
  font-size: 20px;
}

.navigation-container .left-navigation h2 {
  font-size: 14px;
}

.navigation-container .left-navigation img {
  height: 50px;
  padding: 5px 0;
}

.menu-mobile-navigation {
  display: none;
}

.navigation-container .right-navigation {
  height: 100%;
}

.navigation-container .right-navigation ol {
  height: inherit;
  display: flex;
  gap: 0 40px;
}

.navigation-container .right-navigation ol li {
  height: inherit;
  display: flex;
  align-items: center;
  font-weight: bold;
  cursor: pointer;
}

.navigation-container .right-navigation ol li:hover {
  box-sizing: border-box;
  border-bottom: 3px solid var(--theme-color-primary);
}

.navigation-container .right-navigation ol li a {
  height: inherit;
  display: flex;
  align-items: center;
  color: inherit;
}

/* === HEADER / TOP NAV END === */

/* === HERO SECTION START ===*/
#hero {
  background-image: url("/image/golang_a02_lightgray_color.svg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: right center;
  display: flex;
  overflow-x: hidden;
}

#hero section {
  flex-basis: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-bottom: 160px;
}

#hero section .terminal {
  width: 80%;
  height: 50%;
}

#hero section.left-hero {
  transition: all 0.2s linear;
}

#hero section.left-hero .command-control {
  display: flex;
  justify-content: space-between;
  background-color: #161718;
  color: white;
  padding: 4px 8px;
  border-radius: 4px 4px 0 0;
}

.command-control-action {
  display: flex;
}

.command-control-action div {
  display: flex;
  align-items: center;
  padding: 0 4px;
}

#hero section.left-hero .command-line-box {
  height: calc(100% - 27px);
  font-family: 'Courier New', Courier, monospace;
  border-radius: 0 0 4px 4px;
  background-color: black;
}

#hero section.left-hero .command-line-box .command-line {
  display: inline-flex;
  padding: 20px 10px;
  font-weight: bold;
  color: white;
}

#hero section.left-hero .command-line-box .command-line p {
  margin: 0 0 auto 0;
}

#hero section.left-hero .command-line-box .command-line p:nth-child(1) {
  padding-right: 8px;
  color: orange
}

#hero section.left-hero .command-line-box .command-input {
  overflow: hidden;
  border-right: 0.35em solid white;
  white-space: nowrap;
  margin: 0 auto;
  letter-spacing: .1em;
  animation: typing 4.5s steps(40, end), blink-caret .75s step-end infinite;
  animation-delay: 1s;
  animation-iteration-count: infinite;
}

#hero section.left-hero .command-line-box .command-input span {
  color: gray;
}

#hero section.right-hero {
  padding-left: 40px;
  color: var(--theme-color-primary);
  align-items: flex-start;
}

#hero section.right-hero h1 {
  font-size: 76px;
  margin-bottom: 0;
}

#hero section.right-hero p {
  font-size: 36px;
  margin-bottom: 20px;
}

#hero section.right-hero .action-button {
  color: var(--theme-color-);
  font-size: 20px;
  font-weight: bold;
  padding: 10px 20px;
  border: 2px dashed var(--theme-color-primary);
  background-color: var(--theme-color-quaternary);
  margin-bottom: 70px;
}

#hero section.right-hero .action-button:hover {
  color: var(--theme-color-quaternary);
  background-color: var(--theme-color-primary);
}

/* === HERO SECTION END ===*/

/* === CONTACT SECTION START ==*/
#form_contact h1 {
  display: flex;
  flex-direction: column;
}

#form_contact>h1,
#form_contact>p {
  text-align: center;
  color: var(--theme-color-primary);
}

#form_contact h1 {
  margin-bottom: 0;
}

#form_contact>p {
  font-size: 24px;
  margin-top: 0;
}

#form_contact .content-contact {
  margin-top: 2em;
  display: flex;
}

#form_contact .content-contact .contact-info,
#form_contact .content-contact .contact-form {
  width: 50%;
  color: var(--theme-color-primary);
}

#form_contact .content-contact .contact-info {
  padding: 0 40px;
  background-image: url("/image/undraw_my_location_re_r52x.svg");
  background-size: 200px;
  background-repeat: no-repeat;
  background-position: 10% bottom;
  overflow-x: hidden;
}

#form_contact .content-contact .contact-info ol {
  font-size: 20px;
}

#form_contact .content-contact .contact-info ol li {
  padding: 8px 0;
  width: 60%;
}

#form_contact .content-contact .contact-info ol li:nth-child(1) {
  font-weight: bold;
}

#form_contact .content-contact .contact-form .form-group {
  padding: 10px 0;
}

#form_contact .content-contact .contact-form .form-group .form-control {
  width: 100%;
  color: var(--theme-color-primary);
  border-radius: 2px;
  padding: 10px 20px;
  font-size: 18px;
  border: 2px dashed var(--theme-color-primary);
  font-family: var(--theme-font);
  outline: none;
  font-weight: bold;
}

#form_contact .content-contact .contact-form .form-group .form-control:focus {
  border: 2px dashed var(--theme-color-tertiary);
}

#form_contact .content-contact .contact-form .form-group button.form-control {
  border: 2px dashed var(--theme-color-primary);
  background-color: var(--theme-color-quaternary);
  color: var(--theme-color-primary);
  font-weight: bold;
  cursor: pointer;
}

#form_contact .content-contact .contact-form .form-group button.form-control:hover {
  color: var(--theme-color-quaternary);
  background-color: var(--theme-color-primary);
}


/* === CONTACT SECTION END ==*/

